# ChangeLog for net-libs/xulrunner
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.108 2008/05/17 17:08:46 armin76 Exp $

  17 May 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9_rc1.ebuild:
  Raise nspr/nss dep

*xulrunner-1.9_rc1 (17 May 2008)

  17 May 2008; Raúl Porcel <armin76@gentoo.org> +xulrunner-1.9_rc1.ebuild:
  Version bump

  22 Apr 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  xulrunner-1.8.1.14.ebuild:
  ppc stable, bug #218065

*xulrunner-1.9_beta5-r1 (21 Apr 2008)

  21 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  -xulrunner-1.9_beta5.ebuild, +xulrunner-1.9_beta5-r1.ebuild:
  Fix symlink, thanks to hoffie for the report

  19 Apr 2008; Markus Rothe <corsair@gentoo.org> xulrunner-1.8.1.14.ebuild:
  Stable on ppc64; bug #218065

  19 Apr 2008; Markus Meier <maekke@gentoo.org> xulrunner-1.8.1.14.ebuild:
  amd64 stable, security bug #218065

  18 Apr 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.8.1.14.ebuild:
  alpha/ia64/sparc/x86 stable wrt security #218065

  18 Apr 2008; Jeroen Roovers <jer@gentoo.org> xulrunner-1.8.1.14.ebuild:
  Stable for HPPA (bug #218065).

*xulrunner-1.8.1.14 (17 Apr 2008)

  17 Apr 2008; Raúl Porcel <armin76@gentoo.org> +xulrunner-1.8.1.14.ebuild:
  Version bump

*xulrunner-1.9_beta5 (08 Apr 2008)

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> -xulrunner-1.8.1.12.ebuild,
  +xulrunner-1.9_beta5.ebuild:
  Add 1.9

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> xulrunner-1.8.1.13.ebuild:
  Stable for HPPA (bug #214816).

  27 Mar 2008; Brent Baude <ranger@gentoo.org> xulrunner-1.8.1.13.ebuild:
  Marking xulrunner-1.8.1.13 ppc64 and ppc for bug 214816

  27 Mar 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.8.1.13.ebuild:
  alpha/ia64/sparc stable wrt #214816

  27 Mar 2008; Markus Meier <maekke@gentoo.org> xulrunner-1.8.1.13.ebuild:
  amd64/x86 stable, security bug #214816

*xulrunner-1.8.1.13 (26 Mar 2008)
